# gofi

./: .gitignore  README.md  gofi.py  setup.cfg  setup.py
.github/workflows/: lint-test.yml
gofi/: __init__.py  cli.py  config.py  gofi.py  gui.py  objects.py  utils.py
src/: gofi.py
src/tests/: test_gofi.py
