[metadata]
name = gofi
version = attr: goofi.__version__
description = GTK+3 Application launcher
long_description = file: README.md
long_description_content_type = text/markdown
author = Kristoffer Andergrim
author_email = andergrim@gmail.com
url = https://github.com/andergrim/gofi

classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Environment :: X11 Applications :: Gnome
    Operating System :: POSIX :: Linux

[options]
python_requires = >=3.8
packages = gofi
install_requires = 
    pycairo = >=1.19.1
    PyGObject = >= 3.36.1

[options.entry_points]
console_scripts = 
    gofi = gofi.cli:main

[flake8]
exclude = 
    .git
    __pycache__
max-line-length = 129
